--- a/public/assets/css/listmusic.css
+++ b/public/assets/css/listmusic.css
@@ -1,23 +1,24 @@
-body{
+body {
     width: 100%;
-    height: 100%;
+    height: auto;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(21, 21, 21);
+    background: black;
 }
+
+section{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(46, 46, 46);
+}
+
 
 .name {
     font-weight: 700;
     color: white;
     font-family: Verdana;
   }
-
-.utama{
-    width: 100%;
-    height: auto;
-
-}
 
 .contain{
     width: 100%;
