--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -9,7 +9,7 @@ body{
     margin-top: 10vh;
     background-color: rgb(36, 36, 36);
     width: 100%;
-    height: 40vh;
+    height: auto;
     display: flex;
     justify-content: start;
     border-radius: 10px;
@@ -32,6 +32,7 @@ body{
     justify-content: center;
     display: flex;
     align-items: center;
+    padding: 10px;
 }
 
 form{
@@ -82,6 +83,10 @@ form{
     color: white;
     font-size: 5vh;
     font-style: italic;
+}
+.user-bio{
+    color: white;
+    font-size: 3vh;
 }
 
 
