--- a/public/assets/css/listmusic.css
+++ b/public/assets/css/listmusic.css
@@ -103,6 +103,8 @@ table img{
 
 
 
+
+
 .navbar{
     background-color: rgb(33, 33, 33);
 }
@@ -125,3 +127,11 @@ table img{
 .bi-music-note-beamed{
     color: white;
 }
+
+#toggle{
+    color: white;
+  }
+  
+#togle{
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
