--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -11,8 +11,10 @@ body{
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: start;
     border-radius: 10px;
+    flex-wrap: wrap;
+    align-items: center;
+    
 }
 .section2{
     margin-top: 5vh;
@@ -20,26 +22,67 @@ body{
     width: 100%;
     height: auto;
     display: flex;
-    justify-content: center;
     border-radius: 10px;
+    
+    flex-wrap: wrap;
   
 }
 
+.insect{
+    flex-grow: 1;
+    width: auto;
+    height: auto;
+    
+    display: flex;
+    /* flex-direction: column;
+    align-items: center; */
+    justify-content: center;
+    /* padding: 3%; */
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
+    flex-basis: 350px;
+}
+
+.insect h2{
+    color: white;
+    position: absolute;
+}
+
+
+
 .cont1{
     /* border: solid white; */
-    width: 30vw;
+    flex-grow: 1;
+    width: auto;
     height: 100%;
     justify-content: center;
     display: flex;
     align-items: center;
     padding: 10px;
+    flex-basis: 350px;
+}
+.cont2{
+    flex-grow: 1;
+    flex-basis: 350px;
+    width: auto;
+    height: 100%;
+    /* border: solid white; */
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   padding-left: 30px;
+  /* background-color: rgb(39, 38, 38);
+  border-radius: 10px; */
+   
+   
 }
 
 form{
     /* border: solid white; */
-    width: 450px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    flex-grow: 1;
+    margin-top: 45px;
 }
 
 .isi{
@@ -59,16 +102,7 @@ form{
     
 }
 
-.cont2{
-    width: 40vw;
-    height: 100%;
-    /* border: solid white; */
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   
-   
-}
+
 
 .user-name{
     color: white;
@@ -81,7 +115,7 @@ form{
 }
 .user-email{
     color: white;
-    font-size: 5vh;
+    font-size: 4vh;
     font-style: italic;
 }
 .user-bio{
@@ -123,3 +157,11 @@ form{
     color: white;
     margin-left: 10px;
 }
+
+.navbar-toggler{
+    color: white;
+  }
+  
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
