--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(to right,#9a1d86, #1595be);
     font-weight: bold;
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
     }
     
     .player{
