--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,9 +1,9 @@
 body {
-    width: 100%;
-    height: 100%;
+    
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
+    /* background-color: rgb(42, 178, 11); */
     background-color: rgb(21, 21, 21);
   margin: 5px;
 }
