--- a/public/assets/css/listmusic.css
+++ b/public/assets/css/listmusic.css
@@ -4,13 +4,13 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 8px;
+    padding: 1%;
     
 }
 
 section{
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 
 
@@ -25,24 +25,29 @@ section{
     height: auto;
     margin-top: 8.5vh;
     display: flex;
+    flex-wrap: wrap;
     border-radius: 10px;
     background-color: rgb(35, 35, 35);
+    padding: 1vh;
 }
 
 .column1{
-    width: 50%;
-    height: 50vh;
-    
+    width: auto;
+    height: auto;
+    flex-grow: 1;
+    flex-basis: 350px;
     display: flex;
     align-items: center;
-    justify-content: end;
-
+    justify-content: center;
 }
 .column2{
-    width: 50%;
-    height: 50vh;
+    width: auto;
+    height: 100%;
+    flex-grow: 1;
+    flex-basis: 350px;
     display: flex;
-    padding: 1vw;
+    padding: 1vh;
+    /* border: solid white; */
 }
 
 .play-song{
@@ -63,20 +68,15 @@ section{
 }
 
 .incolumn1{
-    width: auto;
+    width: 100%;
     height: auto;
-    
     overflow: hidden;
     border-radius: 10px;
 }
 
 
 .incolumn1 img{
-    width: 40vw;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    margin-right: 1vw;
+    width: 100%;
 
    
 }
