--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -149,6 +149,14 @@ h2{
     cursor: pointer;
     font-size: 1rem;
 }
+
+#forgot{
+    color: #00ccff;
+}
+#sign{
+    color: #00ccff;
+}
+
 .glowIcon {
     text-shadow: 0 0 10px #00ccff;
 
