--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(to right,#272627, #091e25);
+    background: linear-gradient(to right,#ffffff, #f7f7f7);
     /* background: linear-gradient(to right,#9a1d86, #1595be); */
     font-weight: bold;
     /* padding: 5%; */
