--- a/public/assets/css/forgot.css
+++ b/public/assets/css/forgot.css
@@ -72,8 +72,8 @@
   
   .button1 {
     padding: 0.5em;
-    padding-left: 1.1em;
-    padding-right: 1.1em;
+    padding-left: 2em;
+    padding-right: 2em;
     border-radius: 5px;
     margin-right: 0.5em;
     flex-grow: 1;
@@ -86,15 +86,15 @@
   }
   
   .button1:hover {
-    background-image: linear-gradient(163deg,  #a00000fa 0%, #d10050 100%);
+    background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
     color: rgb(0, 255, 200);
   }
   
   .button2 {
     flex-grow: 1;
     padding: 0.5em;
-    padding-left: 2.3em;
-    padding-right: 2.3em;
+    padding-left: 2em;
+    padding-right: 2em;
     border-radius: 5px;
     border: none;
     outline: none;
